{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 117,
  "lineage": "ab33c21f-3df4-52d5-6cba-73074b2afc1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0599b6e53ca798bb2",
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:instance/i-0d7a20ee5fa20d565",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7a20ee5fa20d565",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWSServ",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085443f6dba775719",
            "private_dns": "ip-10-1-1-83.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.83",
            "public_dns": "ec2-18-179-197-147.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.179.197.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02a5dcd3be1095bbd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03db3cd047867a8ac",
            "tags": {
              "Name": "aws-study-test-ec2"
            },
            "tags_all": {
              "Name": "aws-study-test-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e0de44f06387ac0"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_subnet.public_1a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:internet-gateway/igw-06f4b4fd043053887",
            "id": "igw-06f4b4fd043053887",
            "owner_id": "442426854428",
            "tags": {
              "Name": "aws_study_test_igw"
            },
            "tags_all": {
              "Name": "aws_study_test_igw"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:loadbalancer/app/test-alb/691071331edd053f",
            "arn_suffix": "app/test-alb/691071331edd053f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-alb-495077565.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:loadbalancer/app/test-alb/691071331edd053f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e0de44f06387ac0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b680dc1cd5f8c11"
              },
              {
                "subnet_id": "subnet-03db3cd047867a8ac"
              }
            ],
            "subnets": [
              "subnet-02b680dc1cd5f8c11",
              "subnet-03db3cd047867a8ac"
            ],
            "vpc_id": "vpc-0467d8b6b43fcc6be",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test_http_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:listener/app/test-alb/691071331edd053f/b72845174959729d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:targetgroup/test-tg/75d6a5bf559d4903",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:listener/app/test-alb/691071331edd053f/b72845174959729d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:loadbalancer/app/test-alb/691071331edd053f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test_alb",
            "aws_lb_target_group.test_tg",
            "aws_security_group.sg-ec2",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "test_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:targetgroup/test-tg/75d6a5bf559d4903",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:listener-rule/app/test-alb/691071331edd053f/b72845174959729d/e96a1a2ecd35edd5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:listener-rule/app/test-alb/691071331edd053f/b72845174959729d/e96a1a2ecd35edd5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:listener/app/test-alb/691071331edd053f/b72845174959729d",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test_alb",
            "aws_lb_listener.test_http_alb_listener",
            "aws_lb_target_group.test_tg",
            "aws_security_group.sg-ec2",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:targetgroup/test-tg/75d6a5bf559d4903",
            "arn_suffix": "targetgroup/test-tg/75d6a5bf559d4903",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:targetgroup/test-tg/75d6a5bf559d4903",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:targetgroup/test-tg/75d6a5bf559d4903-20250414004550938700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442426854428:targetgroup/test-tg/75d6a5bf559d4903",
            "target_id": "i-0d7a20ee5fa20d565"
          },
          "dependencies": [
            "aws_instance.test_ec2",
            "aws_lb_target_group.test_tg",
            "aws_security_group.sg-ec2",
            "aws_subnet.public_1a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06f4b4fd043053887",
            "id": "r-rtb-062206733fde072711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062206733fde07271",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.rtb-public",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds-rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:route-table/rtb-07cdb0ac35c22d79d",
            "id": "rtb-07cdb0ac35c22d79d",
            "owner_id": "442426854428",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-study-test-rds-rtb-private"
            },
            "tags_all": {
              "Name": "aws-study-test-rds-rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:route-table/rtb-0d66350bb2fd7f706",
            "id": "rtb-0d66350bb2fd7f706",
            "owner_id": "442426854428",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-study-test-rtb-private-1a"
            },
            "tags_all": {
              "Name": "aws-study-test-rtb-private-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:route-table/rtb-0c707d2d80f1da217",
            "id": "rtb-0c707d2d80f1da217",
            "owner_id": "442426854428",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-study-test-rtb-private-1c"
            },
            "tags_all": {
              "Name": "aws-study-test-rtb-private-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:route-table/rtb-062206733fde07271",
            "id": "rtb-062206733fde07271",
            "owner_id": "442426854428",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-study-test-rtb-public"
            },
            "tags_all": {
              "Name": "aws-study-test-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e443109d7b3f356",
            "route_table_id": "rtb-0d66350bb2fd7f706",
            "subnet_id": "subnet-00de9a668a2756e3b"
          },
          "dependencies": [
            "aws_route_table.rtb-private-1a",
            "aws_subnet.private_1a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072c234e10c364ed7",
            "route_table_id": "rtb-0c707d2d80f1da217",
            "subnet_id": "subnet-0813ec9a5c6f55b1c"
          },
          "dependencies": [
            "aws_route_table.rtb-private-1c",
            "aws_subnet.private_1c",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d453b6d2825aa47",
            "route_table_id": "rtb-062206733fde07271",
            "subnet_id": "subnet-03db3cd047867a8ac"
          },
          "dependencies": [
            "aws_route_table.rtb-public",
            "aws_subnet.public_1a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098c59e4b4f949051",
            "route_table_id": "rtb-062206733fde07271",
            "subnet_id": "subnet-02b680dc1cd5f8c11"
          },
          "dependencies": [
            "aws_route_table.rtb-public",
            "aws_subnet.public_1c",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-rds-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0793bbe2c6d6311be",
            "route_table_id": "rtb-07cdb0ac35c22d79d",
            "subnet_id": "subnet-05757660ae330a260"
          },
          "dependencies": [
            "aws_route_table.rds-rtb-private",
            "aws_subnet.rds_prv_1a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-rds-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053ae1101aa283937",
            "route_table_id": "rtb-07cdb0ac35c22d79d",
            "subnet_id": "subnet-0c1c14ac10de2d517"
          },
          "dependencies": [
            "aws_route_table.rds-rtb-private",
            "aws_subnet.rds_prv_1c",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group/sg-09e0de44f06387ac0",
            "description": "EC2",
            "egress": [],
            "id": "sg-09e0de44f06387ac0",
            "ingress": [],
            "name": "aws-study-test-sg-ec2",
            "name_prefix": "",
            "owner_id": "442426854428",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-study-test-sg-ec2"
            },
            "tags_all": {
              "Name": "aws-study-test-sg-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group/sg-0fe2ec142dd57c3e4",
            "description": "RDS",
            "egress": [],
            "id": "sg-0fe2ec142dd57c3e4",
            "ingress": [],
            "name": "aws-study-test-sg-rds",
            "name_prefix": "",
            "owner_id": "442426854428",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-study-test-sg-rds"
            },
            "tags_all": {
              "Name": "aws-study-test-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:subnet/subnet-00de9a668a2756e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00de9a668a2756e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426854428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_study_test-private-1a"
            },
            "tags_all": {
              "Name": "aws_study_test-private-1a"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:subnet/subnet-0813ec9a5c6f55b1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0813ec9a5c6f55b1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426854428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_study_test-private-1c"
            },
            "tags_all": {
              "Name": "aws_study_test-private-1c"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:subnet/subnet-03db3cd047867a8ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03db3cd047867a8ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426854428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_study_test-public-1a"
            },
            "tags_all": {
              "Name": "aws_study_test-public-1a"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:subnet/subnet-02b680dc1cd5f8c11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b680dc1cd5f8c11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426854428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_study_test-public-1c"
            },
            "tags_all": {
              "Name": "aws_study_test-public-1c"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_prv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:subnet/subnet-05757660ae330a260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05757660ae330a260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426854428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_study_rds_prv-1a"
            },
            "tags_all": {
              "Name": "aws_study_rds_prv-1a"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_prv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:subnet/subnet-0c1c14ac10de2d517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1c14ac10de2d517",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426854428",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws_study_rds_prv-1c"
            },
            "tags_all": {
              "Name": "aws_study_rds_prv-1c"
            },
            "vpc_id": "vpc-0467d8b6b43fcc6be"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:vpc/vpc-0467d8b6b43fcc6be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cc0afbddce54e24b",
            "default_route_table_id": "rtb-0604ece8bb42a90d3",
            "default_security_group_id": "sg-0b673bc2fc61607ce",
            "dhcp_options_id": "dopt-0ea02b9afd0970293",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0467d8b6b43fcc6be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0604ece8bb42a90d3",
            "owner_id": "442426854428",
            "tags": {
              "Name": "aws_study_test_vpc"
            },
            "tags_all": {
              "Name": "aws_study_test_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-075140e5df1613216",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-075140e5df1613216",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09e0de44f06387ac0",
            "security_group_rule_id": "sgr-075140e5df1613216",
            "tags": {
              "Name": "allow-all"
            },
            "tags_all": {
              "Name": "allow-all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds-allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-09f3a3dfa581aa6f4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09f3a3dfa581aa6f4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fe2ec142dd57c3e4",
            "security_group_rule_id": "sgr-09f3a3dfa581aa6f4",
            "tags": {
              "Name": "rds-allow-all"
            },
            "tags_all": {
              "Name": "rds-allow-all"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-rds",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-05f7167fe16b9b2a9",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-05f7167fe16b9b2a9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09e0de44f06387ac0",
            "security_group_rule_id": "sgr-05f7167fe16b9b2a9",
            "tags": {
              "Name": "allow-8080"
            },
            "tags_all": {
              "Name": "allow-8080"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-033c84bcab7dbfa3f",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-033c84bcab7dbfa3f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09e0de44f06387ac0",
            "security_group_rule_id": "sgr-033c84bcab7dbfa3f",
            "tags": {
              "Name": "allow-http"
            },
            "tags_all": {
              "Name": "allow-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-06391d3a22c754982",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-06391d3a22c754982",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fe2ec142dd57c3e4",
            "security_group_rule_id": "sgr-06391d3a22c754982",
            "tags": {
              "Name": "allow-3306"
            },
            "tags_all": {
              "Name": "allow-3306"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-rds",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-065712d514fbf543d",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-065712d514fbf543d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09e0de44f06387ac0",
            "security_group_rule_id": "sgr-065712d514fbf543d",
            "tags": {
              "Name": "allow-https"
            },
            "tags_all": {
              "Name": "allow-https"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442426854428:security-group-rule/sgr-010319de560dc3bb7",
            "cidr_ipv4": "10.1.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-010319de560dc3bb7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09e0de44f06387ac0",
            "security_group_rule_id": "sgr-010319de560dc3bb7",
            "tags": {
              "Name": "allow-SSH"
            },
            "tags_all": {
              "Name": "allow-SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ec2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    }
  ]
}